# mad_soft_interview_task

./: docker-compose.yaml
memes-pics-service/: Dockerfile  pyproject.toml  run.py
memes-pics-service/memes_pics_service/: app.py  settings.py
memes-pics-service/memes_pics_service/schemas/: response.py  schemas.py
memes-pics-service/memes_pics_service/service/: __init__.py  response_builder.py  service.py  utils.py
memes-pics-service/memes_pics_service/storage/: __init__.py  storage.py
memes-service/: Dockerfile  README.md  open-api.json  pyproject.toml  pytest.ini  run.py  setup.cfg
memes-service/memes_service/: app.py  deps.py  migrate.py  settings.py
memes-service/memes_service/minio/: __init__.py  minio.py
memes-service/memes_service/orm/postgres/: con.py  manager.py  models.py
memes-service/memes_service/schemas/: request.py  response.py  schemas.py
memes-service/memes_service/service/: response_builder.py  service.py  storage.py  utils.py
memes-service/memes_service/storage/: __init__.py  exceptions.py  storage.py  utils.py
memes-service/tests/: client.py  test_endpoints.py
