[tool.poetry]
name = "memes-service"
version = "0.1.0"
description = "REST Full API memes service"
authors = ["pupCrypto <ujif_cryptoriders@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.3"
pydantic-settings = "^2.3.2"
pytest = "^8.2.2"


sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migration = "memes_service.migrate:main"